# ai-memoria

./: README.md  docker-compose.dev.yml
backend/: Dockerfile.dev  aimemoria.db  alembic.ini  main.py  pyproject.toml  requirements.txt  start.py
backend/alembic/: env.py
backend/alembic/versions/: 1ae5cc34cf83_initial_migration.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: auth.py  content.py  contents.py  files.py  health.py  llm.py  users.py
backend/core/: config.py  initial_data.py  security.py  security_utils.py
backend/data/: ai_memoria.db
backend/db/: __init__.py  base.py  base_class.py  dependencies.py  init_db.py  session.py
backend/db/crud/: __init__.py  base.py  content.py  crud_content.py  crud_file.py  crud_user.py  user.py
backend/db/models/: __init__.py  base.py  content.py  file.py  user.py
backend/db/schemas/: __init__.py  auth.py  base.py  content.py  file.py  user.py
backend/schemas/: __init__.py  content.py  user.py
backend/services/: file_service.py  sync_service.py
docs/: DEVELOPMENT.md  NETWORK_CONFIG.md
frontend/: README.md  index.html  package-lock.json  package.json  start.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/assets/: manifest.json
frontend/src/components/: NetworkStatus.vue
frontend/src/config/: index.ts
frontend/src/layouts/: AuthLayout.vue  DefaultLayout.vue
frontend/src/pages/: HomePage.vue  NotFoundPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: userStore.ts
frontend/src/styles/: main.scss
frontend/src/types/: api.ts
(+4 files in other folders)
